# Lumen

./: .gitignore  CMakeLists.txt  OptimizedSchedule.cpp  README.md  application.qrc  lumen.qmlproject  qmlmodules  qtquickcontrols2.conf  resources.qrc  timeslotmodel.cpp  timeslotmodel.h
content/: App.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/lumen/: CMakeLists.txt  qmldir
imports/lumen/designer/: plugin.metainfo
qml/: AddTimeSlot.qml  CMakeLists.txt  CardTemplate.qml  Constants.qml  CourseEditor.qml  CourseForm.qml  CoursesGraph.qml  CreditHoursDisplay.qml  EditorHomePage.qml  EditorHomePageCard.qml  EditorPage.qml  EditorSchedule.qml  EditorTabBar.qml  FixedRow.qml  InstructorEditor.qml  KPI.qml  LabeledComboBox.qml  LandPage.qml  LandPageButton.qml  LandPageText.qml  LocationEditor.qml  LumenButton.qml  LumenCard.qml  LumenHeader.qml  LumenLogo.qml  LumenRectangle.qml  LumenTabButton.qml  Main.qml  Main.qml.autosave~RF22c82a6e.TMP  Main.qml~RF22970224.TMP  Main.qml~RF22a6bee3.TMP  Main.qml~RF22aa06ea.TMP  Main.qml~RF22cf97eb.TMP  Main.qml~RF22d58e39.TMP  Main.qml~RF22dae70f.TMP  Main.qml~RF22de7df2.TMP  Main.qml~RF22df4672.TMP  Main.qml~RF22dfd3dd.TMP  Main.qml~RF22e1556c.TMP  Main.qml~RF22e21570.TMP  (+112 more)
src/: Course.h  CourseModel.cpp  CourseModel.h  Instructor.h  InstructorModel.cpp  InstructorModel.h  JsonReader.cpp  JsonReader.h  JsonReader.inl  JsonSerializable.h  JsonWriter.cpp  JsonWriter.h  JsonWriter.inl  Location.h  LocationModel.cpp  LocationModel.h  Main.cpp  Repository.h  Repository.inl  RepositoryManager.cpp  RepositoryManager.h  UserConf.cpp  UserConf.h  app_environment.h  import_qml_plugins.h  main.cpp  schedule.cpp  schedule.h  scheduleoptimizer.cpp  scheduleoptimizer.h  timeslot.cpp  timeslot.h  timeslotmodel.cpp  timeslotmodel.h
src/Controllers/: CourseController.cpp  CourseController.h  InstructorController.cpp  InstructorController.h  LocationController.cpp  LocationController.h  UserConfController.cpp  UserConfController.h
src/DTOs/: CourseCreationDTO.h
src/Models/: Course.cpp  Course.h  CourseAttendance.cpp  CourseAttendance.h  Doctor.cpp  Doctor.h  ICourse.h  Instructor.cpp  Instructor.h  Lecture.cpp  Lecture.h  Location.cpp  Location.h  Models.h  OptimizedSchedule.cpp  OptimizedSchedule.h  Section.cpp  Section.h  TA.cpp  TA.h
src/Network/: HttpClient.cpp  HttpClient.h
src/Views/: CourseListView.cpp  CourseListView.h  InstructorListView.cpp  InstructorListView.h  LocationListView.cpp  LocationListView.h  OptimizedScheduleView.cpp  OptimizedScheduleView.h
test/: CMakeLists.txt  JsonSerializationTest.cpp  RepositoryTest.cpp
